// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decodes input from issue #988 1`] = `
{
  "reply": {
    "arg": Uint8Array [
      68,
      73,
      68,
      76,
      44,
      108,
      2,
      239,
      246,
      191,
      146,
      3,
      120,
      153,
      158,
      169,
      179,
      9,
      1,
      109,
      2,
      108,
      2,
      214,
      169,
      187,
      174,
      10,
      120,
      142,
      255,
      214,
      233,
      14,
      3,
      107,
      17,
      157,
      247,
      208,
      64,
      4,
      209,
      250,
      255,
      67,
      6,
      194,
      186,
      201,
      151,
      2,
      7,
      252,
      184,
      139,
      132,
      3,
      8,
      176,
      206,
      209,
      132,
      3,
      13,
      232,
      248,
      244,
      159,
      4,
      15,
      204,
      219,
      239,
      180,
      4,
      17,
      216,
      186,
      155,
      232,
      4,
      18,
      238,
      147,
      156,
      147,
      5,
      19,
      130,
      142,
      185,
      209,
      5,
      25,
      223,
      171,
      238,
      248,
      10,
      29,
      171,
      230,
      153,
      170,
      11,
      30,
      246,
      193,
      167,
      160,
      12,
      19,
      199,
      178,
      253,
      248,
      12,
      31,
      216,
      156,
      218,
      136,
      13,
      18,
      141,
      174,
      187,
      174,
      13,
      32,
      152,
      229,
      137,
      166,
      14,
      34,
      108,
      2,
      187,
      173,
      168,
      166,
      7,
      125,
      199,
      152,
      152,
      183,
      12,
      5,
      110,
      113,
      108,
      8,
      174,
      157,
      177,
      144,
      1,
      104,
      143,
      202,
      197,
      180,
      1,
      113,
      241,
      254,
      225,
      141,
      3,
      125,
      215,
      227,
      217,
      254,
      3,
      125,
      139,
      165,
      225,
      140,
      4,
      5,
      187,
      173,
      168,
      166,
      7,
      125,
      146,
      191,
      185,
      198,
      7,
      113,
      159,
      213,
      163,
      233,
      9,
      113,
      108,
      2,
      199,
      195,
      128,
      206,
      3,
      113,
      165,
      193,
      188,
      235,
      3,
      125,
      108,
      9,
      130,
      166,
      252,
      165,
      3,
      9,
      248,
      140,
      136,
      167,
      3,
      10,
      219,
      194,
      149,
      218,
      3,
      5,
      141,
      251,
      151,
      238,
      4,
      5,
      254,
      141,
      142,
      169,
      5,
      9,
      195,
      141,
      170,
      169,
      8,
      9,
      177,
      243,
      195,
      229,
      11,
      9,
      225,
      216,
      135,
      179,
      14,
      11,
      145,
      227,
      150,
      253,
      15,
      5,
      110,
      125,
      110,
      104,
      110,
      12,
      107,
      3,
      237,
      210,
      154,
      185,
      3,
      127,
      230,
      137,
      214,
      252,
      3,
      127,
      231,
      242,
      221,
      207,
      8,
      127,
      108,
      11,
      166,
      250,
      154,
      197,
      1,
      14,
      143,
      217,
      170,
      226,
      1,
      104,
      243,
      234,
      190,
      227,
      1,
      125,
      182,
      169,
      246,
      220,
      2,
      113,
      130,
      166,
      252,
      165,
      3,
      125,
      219,
      194,
      149,
      218,
      3,
      113,
      195,
      141,
      170,
      169,
      8,
      9,
      207,
      137,
      149,
      207,
      10,
      5,
      177,
      243,
      195,
      229,
      11,
      125,
      225,
      216,
      135,
      179,
      14,
      12,
      145,
      227,
      150,
      253,
      15,
      113,
      107,
      5,
      210,
      186,
      201,
      1,
      127,
      164,
      211,
      187,
      69,
      127,
      203,
      242,
      248,
      96,
      127,
      153,
      128,
      222,
      214,
      7,
      127,
      179,
      209,
      203,
      160,
      10,
      127,
      108,
      1,
      160,
      163,
      178,
      157,
      6,
      16,
      108,
      2,
      143,
      202,
      197,
      180,
      1,
      113,
      215,
      227,
      217,
      254,
      3,
      125,
      108,
      5,
      251,
      202,
      1,
      104,
      139,
      165,
      225,
      140,
      4,
      5,
      234,
      202,
      138,
      158,
      4,
      104,
      250,
      178,
      202,
      252,
      6,
      5,
      216,
      163,
      140,
      168,
      13,
      125,
      108,
      1,
      187,
      173,
      168,
      166,
      7,
      125,
      108,
      2,
      165,
      193,
      188,
      235,
      3,
      125,
      222,
      195,
      137,
      220,
      4,
      20,
      108,
      9,
      142,
      149,
      238,
      143,
      1,
      113,
      241,
      254,
      225,
      141,
      3,
      125,
      222,
      214,
      172,
      235,
      3,
      125,
      170,
      172,
      141,
      147,
      4,
      21,
      227,
      235,
      136,
      210,
      6,
      125,
      153,
      231,
      164,
      207,
      8,
      125,
      239,
      153,
      153,
      254,
      9,
      125,
      213,
      248,
      172,
      210,
      10,
      125,
      153,
      224,
      162,
      202,
      15,
      22,
      109,
      123,
      109,
      23,
      108,
      2,
      184,
      145,
      212,
      7,
      24,
      180,
      227,
      173,
      232,
      9,
      113,
      109,
      21,
      108,
      1,
      146,
      182,
      210,
      240,
      11,
      26,
      107,
      2,
      172,
      169,
      229,
      132,
      11,
      27,
      177,
      230,
      157,
      214,
      13,
      28,
      108,
      1,
      165,
      193,
      188,
      235,
      3,
      125,
      108,
      1,
      248,
      131,
      130,
      121,
      125,
      108,
      6,
      251,
      202,
      1,
      104,
      143,
      202,
      197,
      180,
      1,
      5,
      165,
      193,
      188,
      235,
      3,
      125,
      237,
      210,
      186,
      245,
      3,
      125,
      139,
      165,
      225,
      140,
      4,
      5,
      136,
      242,
      247,
      145,
      14,
      125,
      108,
      4,
      174,
      157,
      177,
      144,
      1,
      104,
      139,
      165,
      225,
      140,
      4,
      5,
      160,
      163,
      178,
      157,
      6,
      16,
      216,
      163,
      140,
      168,
      13,
      125,
      108,
      2,
      160,
      163,
      178,
      157,
      6,
      16,
      196,
      159,
      244,
      228,
      15,
      113,
      108,
      8,
      142,
      149,
      238,
      143,
      1,
      113,
      162,
      135,
      212,
      208,
      3,
      125,
      165,
      193,
      188,
      235,
      3,
      125,
      234,
      202,
      138,
      158,
      4,
      104,
      170,
      172,
      217,
      208,
      6,
      120,
      162,
      222,
      148,
      235,
      6,
      33,
      250,
      178,
      202,
      252,
      6,
      5,
      202,
      130,
      182,
      131,
      9,
      125,
      110,
      21,
      108,
      3,
      165,
      193,
      188,
      235,
      3,
      125,
      151,
      204,
      212,
      189,
      6,
      35,
      194,
      185,
      219,
      218,
      10,
      37,
      108,
      6,
      139,
      176,
      131,
      35,
      125,
      178,
      206,
      239,
      47,
      36,
      143,
      202,
      197,
      180,
      1,
      113,
      192,
      254,
      189,
      226,
      3,
      113,
      187,
      173,
      168,
      166,
      7,
      125,
      227,
      172,
      220,
      133,
      12,
      125,
      107,
      2,
      163,
      155,
      253,
      172,
      8,
      127,
      170,
      176,
      174,
      162,
      14,
      127,
      109,
      38,
      108,
      9,
      178,
      206,
      239,
      47,
      39,
      158,
      254,
      185,
      164,
      3,
      113,
      162,
      135,
      212,
      208,
      3,
      125,
      165,
      193,
      188,
      235,
      3,
      125,
      234,
      202,
      138,
      158,
      4,
      104,
      162,
      222,
      148,
      235,
      6,
      33,
      250,
      178,
      202,
      252,
      6,
      5,
      202,
      130,
      182,
      131,
      9,
      9,
      142,
      144,
      239,
      228,
      11,
      113,
      107,
      4,
      194,
      205,
      227,
      219,
      10,
      40,
      156,
      202,
      230,
      169,
      14,
      43,
      164,
      161,
      223,
      172,
      14,
      127,
      183,
      128,
      247,
      201,
      15,
      127,
      107,
      3,
      163,
      155,
      253,
      172,
      8,
      41,
      234,
      182,
      233,
      159,
      13,
      42,
      193,
      247,
      160,
      235,
      14,
      43,
      108,
      2,
      143,
      202,
      197,
      180,
      1,
      113,
      141,
      173,
      197,
      195,
      1,
      9,
      108,
      3,
      143,
      202,
      197,
      180,
      1,
      113,
      237,
      210,
      186,
      245,
      3,
      125,
      136,
      242,
      247,
      145,
      14,
      125,
      108,
      1,
      143,
      202,
      197,
      180,
      1,
      113,
      1,
      0,
      181,
      11,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
  "signatures": [
    {
      "identity": Uint8Array [
        36,
        175,
        112,
        118,
        92,
        84,
        187,
        246,
        180,
        235,
        197,
        108,
        218,
        178,
        134,
        67,
        148,
        231,
        135,
        64,
        188,
        10,
        29,
        206,
        99,
        24,
        20,
        170,
        2,
      ],
      "signature": Uint8Array [
        5,
        118,
        172,
        113,
        233,
        65,
        97,
        18,
        158,
        178,
        114,
        206,
        217,
        242,
        201,
        205,
        184,
        252,
        89,
        95,
        255,
        193,
        122,
        14,
        39,
        70,
        142,
        79,
        129,
        224,
        89,
        175,
        121,
        25,
        204,
        81,
        253,
        183,
        195,
        159,
        15,
        207,
        198,
        141,
        229,
        150,
        214,
        205,
        132,
        96,
        41,
        194,
        134,
        217,
        49,
        242,
        76,
        33,
        210,
        107,
        106,
        175,
        62,
        12,
      ],
      "timestamp": 1743780153204404492n,
    },
  ],
  "status": "replied",
}
`;

exports[`decodes input from issue #988 2`] = `
{
  "certificate": Uint8Array [
    217,
    217,
    247,
    163,
    100,
    116,
    114,
    101,
    101,
    131,
    1,
    131,
    1,
    130,
    4,
    88,
    32,
    56,
    205,
    85,
    149,
    79,
    187,
    22,
    126,
    191,
    205,
    11,
    156,
    220,
    221,
    141,
    7,
    243,
    79,
    249,
    2,
    9,
    244,
    209,
    21,
    82,
    137,
    75,
    36,
    47,
    87,
    171,
    91,
    131,
    1,
    130,
    4,
    88,
    32,
    222,
    65,
    107,
    69,
    196,
    151,
    209,
    32,
    236,
    134,
    187,
    173,
    254,
    97,
    136,
    37,
    187,
    179,
    178,
    254,
    161,
    68,
    13,
    253,
    215,
    3,
    33,
    172,
    176,
    171,
    78,
    125,
    131,
    2,
    78,
    114,
    101,
    113,
    117,
    101,
    115,
    116,
    95,
    115,
    116,
    97,
    116,
    117,
    115,
    131,
    1,
    130,
    4,
    88,
    32,
    246,
    127,
    74,
    120,
    231,
    106,
    133,
    51,
    194,
    127,
    204,
    193,
    235,
    9,
    227,
    22,
    40,
    12,
    19,
    10,
    222,
    38,
    94,
    177,
    216,
    217,
    42,
    168,
    186,
    240,
    178,
    216,
    131,
    1,
    131,
    1,
    130,
    4,
    88,
    32,
    230,
    63,
    41,
    25,
    12,
    110,
    218,
    45,
    14,
    117,
    107,
    129,
    177,
    32,
    231,
    117,
    213,
    182,
    214,
    247,
    11,
    146,
    13,
    220,
    53,
    137,
    2,
    177,
    86,
    226,
    67,
    228,
    131,
    1,
    131,
    1,
    130,
    4,
    88,
    32,
    124,
    146,
    221,
    12,
    33,
    208,
    179,
    133,
    113,
    21,
    154,
    202,
    228,
    189,
    87,
    166,
    213,
    163,
    136,
    1,
    30,
    160,
    249,
    150,
    130,
    108,
    29,
    100,
    222,
    61,
    71,
    35,
    131,
    2,
    88,
    32,
    210,
    62,
    22,
    125,
    75,
    207,
    27,
    116,
    93,
    242,
    84,
    216,
    78,
    166,
    88,
    165,
    9,
    76,
    199,
    119,
    19,
    87,
    209,
    148,
    21,
    77,
    216,
    137,
    201,
    18,
    104,
    228,
    131,
    1,
    131,
    2,
    69,
    114,
    101,
    112,
    108,
    121,
    130,
    3,
    88,
    53,
    68,
    73,
    68,
    76,
    3,
    107,
    2,
    188,
    138,
    1,
    127,
    197,
    254,
    210,
    1,
    1,
    107,
    3,
    250,
    247,
    245,
    184,
    11,
    104,
    136,
    154,
    213,
    173,
    15,
    113,
    235,
    156,
    219,
    213,
    15,
    2,
    108,
    2,
    201,
    179,
    141,
    188,
    7,
    125,
    223,
    162,
    138,
    147,
    11,
    125,
    1,
    0,
    0,
    131,
    2,
    70,
    115,
    116,
    97,
    116,
    117,
    115,
    130,
    3,
    71,
    114,
    101,
    112,
    108,
    105,
    101,
    100,
    130,
    4,
    88,
    32,
    254,
    130,
    13,
    212,
    117,
    207,
    0,
    97,
    52,
    174,
    236,
    222,
    62,
    96,
    64,
    19,
    254,
    113,
    153,
    136,
    214,
    147,
    103,
    63,
    11,
    242,
    209,
    243,
    168,
    111,
    61,
    181,
    130,
    4,
    88,
    32,
    40,
    108,
    34,
    55,
    185,
    206,
    101,
    197,
    92,
    149,
    16,
    230,
    39,
    107,
    39,
    46,
    95,
    77,
    37,
    220,
    137,
    56,
    131,
    16,
    32,
    166,
    129,
    208,
    110,
    244,
    200,
    119,
    131,
    1,
    130,
    4,
    88,
    32,
    202,
    178,
    179,
    92,
    31,
    92,
    242,
    235,
    97,
    158,
    130,
    79,
    53,
    115,
    47,
    195,
    208,
    231,
    176,
    28,
    246,
    30,
    177,
    165,
    214,
    155,
    152,
    220,
    225,
    175,
    204,
    132,
    131,
    2,
    68,
    116,
    105,
    109,
    101,
    130,
    3,
    73,
    194,
    198,
    254,
    155,
    141,
    164,
    205,
    153,
    24,
    105,
    115,
    105,
    103,
    110,
    97,
    116,
    117,
    114,
    101,
    88,
    48,
    169,
    197,
    79,
    0,
    195,
    27,
    34,
    219,
    127,
    44,
    180,
    191,
    220,
    145,
    138,
    140,
    80,
    194,
    1,
    175,
    178,
    33,
    66,
    95,
    160,
    141,
    106,
    143,
    176,
    190,
    223,
    115,
    66,
    46,
    251,
    39,
    191,
    156,
    66,
    151,
    158,
    109,
    221,
    156,
    75,
    178,
    209,
    37,
    106,
    100,
    101,
    108,
    101,
    103,
    97,
    116,
    105,
    111,
    110,
    162,
    105,
    115,
    117,
    98,
    110,
    101,
    116,
    95,
    105,
    100,
    88,
    29,
    254,
    50,
    15,
    47,
    187,
    185,
    212,
    156,
    142,
    110,
    219,
    204,
    157,
    133,
    236,
    9,
    107,
    246,
    69,
    53,
    29,
    149,
    187,
    221,
    245,
    86,
    247,
    219,
    2,
    107,
    99,
    101,
    114,
    116,
    105,
    102,
    105,
    99,
    97,
    116,
    101,
    89,
    1,
    229,
    217,
    217,
    247,
    162,
    100,
    116,
    114,
    101,
    101,
    131,
    1,
    130,
    4,
    88,
    32,
    43,
    77,
    42,
    228,
    170,
    26,
    180,
    123,
    97,
    142,
    209,
    185,
    213,
    92,
    177,
    57,
    245,
    215,
    88,
    0,
    179,
    147,
    66,
    251,
    144,
    85,
    159,
    13,
    22,
    195,
    75,
    184,
    131,
    1,
    131,
    1,
    130,
    4,
    88,
    32,
    112,
    60,
    214,
    91,
    33,
    56,
    85,
    152,
    236,
    180,
    111,
    211,
    103,
    26,
    156,
    76,
    142,
    249,
    157,
    27,
    99,
    157,
    217,
    47,
    47,
    116,
    102,
    95,
    71,
    172,
    212,
    59,
    131,
    2,
    70,
    115,
    117,
    98,
    110,
    101,
    116,
    131,
    1,
    130,
    4,
    88,
    32,
    164,
    181,
    157,
    29,
    49,
    56,
    162,
    19,
    251,
    16,
    158,
    9,
    60,
    217,
    138,
    228,
    176,
    45,
    248,
    141,
    133,
    143,
    252,
    234,
    224,
    106,
    192,
    90,
    249,
    188,
    120,
    97,
    131,
    1,
    130,
    4,
    88,
    32,
    196,
    232,
    111,
    48,
    19,
    53,
    35,
    55,
    159,
    56,
    67,
    111,
    189,
    252,
    252,
    91,
    196,
    78,
    200,
    211,
    71,
    102,
    123,
    117,
    216,
    138,
    23,
    57,
    2,
    128,
    17,
    5,
    131,
    2,
    88,
    29,
    254,
    50,
    15,
    47,
    187,
    185,
    212,
    156,
    142,
    110,
    219,
    204,
    157,
    133,
    236,
    9,
    107,
    246,
    69,
    53,
    29,
    149,
    187,
    221,
    245,
    86,
    247,
    219,
    2,
    131,
    1,
    131,
    2,
    79,
    99,
    97,
    110,
    105,
    115,
    116,
    101,
    114,
    95,
    114,
    97,
    110,
    103,
    101,
    115,
    130,
    3,
    88,
    27,
    217,
    217,
    247,
    129,
    130,
    74,
    0,
    0,
    0,
    0,
    1,
    48,
    0,
    0,
    1,
    1,
    74,
    0,
    0,
    0,
    0,
    1,
    63,
    255,
    255,
    1,
    1,
    131,
    2,
    74,
    112,
    117,
    98,
    108,
    105,
    99,
    95,
    107,
    101,
    121,
    130,
    3,
    88,
    133,
    48,
    129,
    130,
    48,
    29,
    6,
    13,
    43,
    6,
    1,
    4,
    1,
    130,
    220,
    124,
    5,
    3,
    1,
    2,
    1,
    6,
    12,
    43,
    6,
    1,
    4,
    1,
    130,
    220,
    124,
    5,
    3,
    2,
    1,
    3,
    97,
    0,
    178,
    166,
    116,
    16,
    131,
    153,
    98,
    35,
    248,
    51,
    132,
    102,
    103,
    64,
    163,
    234,
    207,
    140,
    231,
    140,
    109,
    57,
    254,
    205,
    238,
    88,
    42,
    91,
    36,
    60,
    21,
    135,
    6,
    187,
    33,
    95,
    57,
    107,
    160,
    66,
    157,
    33,
    136,
    223,
    158,
    241,
    118,
    114,
    19,
    6,
    208,
    72,
    170,
    165,
    143,
    107,
    65,
    52,
    87,
    221,
    99,
    239,
    26,
    86,
    222,
    35,
    120,
    231,
    28,
    164,
    68,
    32,
    30,
    41,
    228,
    144,
    227,
    121,
    0,
    152,
    233,
    46,
    232,
    94,
    1,
    66,
    163,
    62,
    248,
    6,
    200,
    56,
    138,
    236,
    107,
    175,
    131,
    2,
    68,
    116,
    105,
    109,
    101,
    130,
    3,
    73,
    173,
    238,
    251,
    145,
    187,
    231,
    179,
    153,
    24,
    105,
    115,
    105,
    103,
    110,
    97,
    116,
    117,
    114,
    101,
    88,
    48,
    168,
    95,
    123,
    75,
    184,
    135,
    7,
    61,
    37,
    12,
    143,
    231,
    118,
    81,
    157,
    14,
    244,
    2,
    72,
    198,
    235,
    245,
    184,
    194,
    252,
    129,
    154,
    123,
    234,
    196,
    100,
    63,
    117,
    138,
    83,
    80,
    69,
    31,
    73,
    52,
    192,
    244,
    99,
    117,
    119,
    83,
    89,
    149,
  ],
  "status": "replied",
}
`;
